--- a/client/src/index.css
+++ b/client/src/index.css
@@ -54,6 +54,34 @@ a {
 a:hover {
   color: #ff8000;
 }
+ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+li {
+  margin-top: 1rem;
+}
+button {
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: 0.1rem #eeeeee solid;
+  font-size: 1.6rem;
+  font-family: Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #d8e3e7;
+  cursor: pointer;
+}
+button:hover {
+  border: 0.1rem #222831 solid;
+}
+button.primary {
+  background-color: #f0c040;
+}
+button.block {
+  width: 100%;
+}
 /* Header */
 header a {
   color: #ffffff;
@@ -73,12 +101,24 @@ a.brand {
 .row.center {
   justify-content: center;
 }
+.row.top {
+  align-items: flex-start;
+}
+.col-1{
+  flex: 1 1 25rem;
+}
+.col-2{
+  flex: 2 1 50rem;
+}
 /* Image */
 img {
   border-radius: 0.5rem;
 }
 img.medium {
   max-width: 29rem;
+  width: 100%;
+}
+img.large {
   width: 100%;
 }
 
@@ -106,4 +146,12 @@ img.medium {
 
 .rating span:last-child {
   color: #403f48;
+}
+
+/* Alert */
+.success {
+  color: #289672;
+}
+.error {
+  color: #d32626;
 }
