--- a/client/src/index.css
+++ b/client/src/index.css
@@ -123,14 +123,23 @@ a.brand {
 .row.top {
   align-items: flex-start;
 }
+.row.start {
+  justify-content: flex-start;
+}
 .col-1{
   flex: 1 1 25rem;
 }
 .col-2{
   flex: 2 1 50rem;
 }
+.col-3 {
+  flex: 3 1 75 rem;
+}
 .min-30 {
   min-width: 30rem;
+}
+.p-1 {
+  padding: 1rem;
 }
 /* Image */
 img {
