--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,16 +62,10 @@ aside {
 aside.open {
   transform: translateX(0);
 }
-button.open-sidebar {
-  font-size: 3rem;
-  padding: 0.2rem 0.5rem;
-  margin: 0 0.5rem;
-  background: none;
-  color: #ffffff;
-  cursor: pointer;
-}
-button.open-sidebar:hover {
-  border-color: #ffffff;
+
+button.sidebar:hover {
+  color: #f0c040;
+  border: none;
 }
 aside ul {
   padding: 0;
