--- a/client/src/index.css
+++ b/client/src/index.css
@@ -136,7 +136,7 @@ img.large {
   margin: 1rem 0;
 }
 
-/* Dropdown */
+/* Dropdown
 .dropdown {
   display: inline-block;
   position: relative;
@@ -157,7 +157,7 @@ img.large {
 
 .dropdown:hover .dropdown-content {
   display: block;
-}
+} */
 
 /* Checkout Steps*/
 .checkout-steps > div {
