added styled component to the product card

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,16 +53,16 @@ img.small {
   max-width: 5rem;
   width: 100%;
 }
-img.medium {
+/* img.medium {
   max-width: 29rem;
   width: 100%;
-}
+} */
 img.large {
   width: 100%;
 }
 
 /* Card */
-.card {
+/* .card {
   border: 0.1rem #c0c0c0 solid;
   background-color: #f8f8f8;
   border-radius: 0.5rem;
@@ -76,7 +76,7 @@ img.large {
 }
 .price {
   font-size: 2rem;
-}
+} */
 /* Rating */
 .rating span {
   color: #f0c040;
