--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,7 +62,7 @@ img.large {
 }
 
 /* Card */
-/* .card {
+.card {
   border: 0.1rem #c0c0c0 solid;
   background-color: #f8f8f8;
   border-radius: 0.5rem;
@@ -76,7 +76,8 @@ img.large {
 }
 .price {
   font-size: 2rem;
-} */
+}
+*/
 /* Rating */
 .rating span {
   color: #f0c040;
