--- a/client/src/index.css
+++ b/client/src/index.css
@@ -122,7 +122,7 @@ img.large {
 }
 
 /* Form */
-.form {
+/* .form {
   max-width: 60rem;
   margin: 0 auto;
 }
@@ -135,7 +135,7 @@ img.large {
 
 .form label {
   margin: 1rem 0;
-}
+} */
 
 /* Dropdown
 .dropdown {
