added page number wrapper component and applied it to search screen and product list screen

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -218,7 +218,7 @@ img.small {
 } */
 
 /* Pagination */
-.pagination a {
+/* .pagination a {
   padding: 1rem;
   margin: 0.5rem;
   border-radius: 0.5rem;
@@ -231,7 +231,7 @@ img.small {
 
 .pagination a.active {
   font-weight: bold;
-}
+} */
 
 /* Dashboard */
 
