--- a/client/src/index.css
+++ b/client/src/index.css
@@ -79,14 +79,14 @@ img.small {
 } */
 */
 /* Rating */
-.rating span {
+/* .rating span {
   color: #f0c040;
   margin: 0.1rem;
 }
 
 .rating span:last-child {
   color: #403f48;
-}
+} */
 
 /* Alert */
 /* 
